# nats-ml

./: .gitattributes  .gitignore  .prototools  AGENTS.md  CHANGES.md  LICENSE  README.md  dune-project  nats-client-async.opam  nats-client-async.opam.template  nats-client.opam  nats-client.opam.template
.changes/: README.md  add-ocaml-package-docs.md  fix-opam-ci-regressions.md  fix-opam-ci-repro.md  fix-opam-platform-ci.md  fix-opam-release.md  integration-tests.md  lockstep-async-opam-dep.md  ocaml-414-compat.md  opam-publication-fix.md  reinstate-published-tests.md
.github/workflows/: ci.yml  integration.yml  opam-repro.yml  opam-targets.yml  publish.yml  release-pr.yml  tag-release.yml
async/: dune  nats_client_async.ml  nats_client_async.mli
doc/nats-client/: dune  index.mld
doc/nats-client-async/: dune  index.mld
examples/: dune  protocol_demo.ml  publish_json.ml  request_reply.ml
examples/natsbyexample/: dune  json_for_message_payloads.ml  publish_subscribe.ml  request_reply.ml
integration/consumer_fixture/: dune  dune-project
lib/: dune  headers.ml  nats_client.ml  nats_client.mli  protocol.ml  sid.ml
published-tests/: dune  published_test_async_client_unit.ml
scripts/: prepare-release.sh  setup-ocaml-414-switch.sh  test-ocaml-414.sh
test/: dune  test_async_client.ml  test_protocol.ml
tests/: check-generated-opam-metadata.sh  check-opam-ci-docker.sh  check-opam-ci.sh  check-opam-package-isolation.sh  check-opam-repro-harness.sh  dune  opam-ci-lib.sh  prepare-opam-ci-artifacts.sh  published_test_protocol.ml  real_nats_integration.ml  run-integration-checks.sh  setup-integration-switch.sh  test-integration.sh  test_async_client.ml  test_async_client_integration.ml  test_async_client_unit.ml
tests/consumer_fixture/: consumer.ml  dune  dune-project
