(tests
 (names published_test_protocol)
 (package nats-client)
 (libraries nats-client))

(tests
 (names published_test_async_client_unit)
 (package nats-client-async)
 (modes byte)
 (libraries core async async_unix uri yojson nats-client nats-client-async))

(executable
 (name test_protocol)
 (libraries alcotest nats-client))

(rule
 (alias repo-unit)
 (action (run %{exe:test_protocol.exe})))

(executable
 (name test_async_client_unit)
 (libraries alcotest core async async_unix uri yojson nats-client nats-client-async))

(rule
 (alias repo-unit)
 (action (run %{exe:test_async_client_unit.exe})))

(executable
 (name test_async_client_integration)
 (libraries alcotest core async async_unix uri yojson nats-client nats-client-async))

(rule
 (alias repo-integration)
 (action (run %{exe:test_async_client_integration.exe})))

(executable
 (name real_nats_integration)
 (libraries core async async_unix uri yojson nats-client nats-client-async))
